ZezeJava: 创建Redirect模块无需先创建原模块对象